--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section class="navbar">
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar bg-body-tertiary navbar-expand-lg fixed-top">
             <div class="container-fluid bcolor">
               <a class="navbar-brand ps-5" href="#"><img class="img-size" src="images/logo.png" alt="logo"/></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,23 +22,21 @@
                     <a class="nav-link " aria-current="page" href="#">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">OUR FEATURES</a>
+                    <a class="nav-link" href="#our features">OUR FEATURES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
+                    <a class="nav-link" href="#About US">ABOUT US</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TESTIMONIALS</a>
+                    <a class="nav-link" href="#Clients">TESTIMONIALS</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       MY ACCOUNT
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="signup.html">Sign Up</a></li>
+                      <li><a class="dropdown-item" href="login.html">Login</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -243,7 +241,24 @@
         </div>
         </div>
     </section>
-   
+   <section id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 hcolor1 py-3">
+                <p>&copy; 2023 All Rights Reserved,SeedKaro</p>
+            </div>
+            <div class="col-lg-6 text-end  py-3">
+                <img class="p-2" src="images/facebook.png" alt="logo"/>
+                <img class="p-2" src="images/instagram.png" alt="logo"/> 
+                <img class="p-2" src="images/twitter.png" alt="logo"/> 
+                <img class="p-2" src="images/youtube.png" alt="logo"/> 
+                <img class="p-2" src="images/call.png" alt="logo"/> 
+                <img class="p-2" src="images/envelope.png" alt="logo"/> 
+                <button class="button " type="button">&#8743;</button>     
+            </div>
+        </div>
+    </div>
+   </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
